<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.dankito.filechooserdialog.demo.MainActivity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSelectSingleFile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_show_file_chooser_buttons_height"
            android:layout_marginTop="@dimen/activity_main_show_file_chooser_buttons_margin_top"
            android:layout_marginLeft="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_show_file_chooser_buttons_margin_bottom"
            android:text="@string/select_single_file"
        />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcySelectedSingleFile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_recycler_view_select_single_file_height"
            android:layout_marginLeft="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_recycler_view_select_single_file_margin_bottom"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:scrollbars="vertical"
        />

        <Button
            android:id="@+id/btnSelectMultipleFiles"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_show_file_chooser_buttons_height"
            android:layout_marginLeft="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_show_file_chooser_buttons_margin_bottom"
            android:text="@string/select_multiple_files"
        />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcySelectedMultipleFiles"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_recycler_view_select_multiple_files_height"
            android:layout_marginLeft="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_recycler_view_select_multiple_files_margin_bottom"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        />

        <Button
            android:id="@+id/btnSelectFolder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_show_file_chooser_buttons_height"
            android:layout_marginTop="@dimen/activity_main_show_file_chooser_buttons_margin_top"
            android:layout_marginLeft="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_show_file_chooser_buttons_margin_bottom"
            android:text="@string/select_folder"
        />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcySelectedFolder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_recycler_view_select_single_file_height"
            android:layout_marginLeft="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_recycler_view_select_single_file_margin_bottom"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:scrollbars="vertical"
        />

        <Button
            android:id="@+id/btnSelectSingleFileInFullscreenDialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_show_file_chooser_buttons_height"
            android:layout_marginTop="@dimen/activity_main_show_file_chooser_buttons_margin_top"
            android:layout_marginLeft="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_show_file_chooser_buttons_margin_bottom"
            android:text="@string/select_single_file_in_fullscreen"
        />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcySelectedSingleFileInFullscreenDialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_recycler_view_select_single_file_height"
            android:layout_marginLeft="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_recycler_view_select_single_file_margin_bottom"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:scrollbars="vertical"
        />

        <Button
            android:id="@+id/btnSelectMultipleFilesInFullscreenDialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_show_file_chooser_buttons_height"
            android:layout_marginLeft="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_show_file_chooser_buttons_margin_bottom"
            android:text="@string/select_multiple_files_in_fullscreen"
        />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcySelectedMultipleFilesInFullscreenDialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_recycler_view_select_multiple_files_height"
            android:layout_marginLeft="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_recycler_view_select_multiple_files_margin_bottom"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        />

        <Button
            android:id="@+id/btnSelectFolderInFullscreenDialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_show_file_chooser_buttons_height"
            android:layout_marginTop="@dimen/activity_main_show_file_chooser_buttons_margin_top"
            android:layout_marginLeft="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_show_file_chooser_buttons_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_show_file_chooser_buttons_margin_bottom"
            android:text="@string/select_folder_in_fullscreen"
        />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcySelectedFolderInFullscreenDialog"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_recycler_view_select_single_file_height"
            android:layout_marginLeft="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginStart="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginRight="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginEnd="@dimen/activity_main_recycler_views_margin_left_right"
            android:layout_marginBottom="@dimen/activity_main_recycler_view_select_single_file_margin_bottom"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:scrollbars="vertical"
        />

    </LinearLayout>

</ScrollView>
